import java.util.ArrayList;

public class Patient {
    Node head;

    public  Patient() {
        this.head = null;
    }
        public boolean isEmpty(){
            if(head == null){
                return  true;
            }
            else {
                return false;
            }
        }


   








}
